добавлена иконка, если человек авторизован

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="image/x-icon" href="../src/photos/logo/newFavicon.png" rel="shortcut icon">
+    <link rel="icon" type="image/x-icon" href="../src/photos/logo/newFavicon.ico" >
     <title>Gekon</title>
 </head>
 <body>
