вынес цвета в отдельный файлик и указал engines versions в package.json

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../src/photos/logo/newFavicon.ico" >
-    <link rel="stylesheet" href="../src/index.sass">
+    <link rel="stylesheet" href="index.sass">
     <title>Gekon</title>
 </head>
 <body>
